# solnexus-freqtrade-adapter

./: .gitignore  LICENSE  README.md  example_alert.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: fetch_alerts.py  freqtrade_strategy.py
solnexus_adapter/: __init__.py  adapter.py  schema.py
tests/: test_adapter.py  test_pipeline.py
tests/fixtures/: next_actions_sample.json
