[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "solnexus-freqtrade-adapter"
version = "0.1.0"
description = "Bridge SolNexus Trade ML-scored on-chain alerts into freqtrade."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SolNexus Trade" }]
keywords = ["solana", "freqtrade", "trading", "crypto", "on-chain"]

[tool.setuptools.packages.find]
include = ["solnexus_adapter*"]
